fix(header): properly align close/open buttons

--- a/packages/header-component/src/components/dc-header/styles/menu-nav.scss
+++ b/packages/header-component/src/components/dc-header/styles/menu-nav.scss
@@ -59,9 +59,14 @@ dc-menu .menu-header {
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  padding-top: 1rem;
+  padding-top: 0.625rem;
   padding-bottom: 1rem;
   width: 100%;
+
+  .menu-close {
+    height: 3.375rem;
+    padding: 0;
+  }
 }
 
 dc-menu .menu-footer {
